33136 - alignment fixed, 33139 - Invoice 000 fixed

--- a/ShiptechV2/assets/theme/common/designsystem-v2-theme/shiptech.scss
+++ b/ShiptechV2/assets/theme/common/designsystem-v2-theme/shiptech.scss
@@ -459,7 +459,7 @@
         //border: 1px solid #a5a5a5;
       }
       &.with-search {
-        width: 152px;
+        width: calc(100% - 30px);
         border-radius: 4px 0px 0px 4px;
         border: 1px solid #a5a5a5;
         border-right: none;
